--- a/index.html
+++ b/index.html
@@ -4,16 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asinment-1</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
+<nav>
+    <h2>Sudipto</h2>
+    <button id="button">Download Resume</button>
+</nav>
 
     </header>
     <main>
-
+        <section class="banner-title">
+            <div>
+    <img src="assets/Group.png" alt="">
+        </div>
+        <div class="banner-description">
+            <h1 id="heading">"In the near future, I hope to<br id="br">become a Developer."</h1>
+            <p id="para">A web developer creates websites using coding languages like HTML, CSS, and JavaScript, ensuring functionality and design meet client needs.</p>
+            <button id="btn">Contact with me</button>
+        </div>
+    </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
