--- a/index.html
+++ b/index.html
@@ -12,19 +12,56 @@
     <h2>Sudipto</h2>
     <button id="button">Download Resume</button>
 </nav>
-
+<section class="banner-title">
+    <div>
+<img src="assets/Group.png" alt="">
+</div>
+<div class="banner-description">
+    <h1 id="heading">"In the near future, I hope to<br id="br">become a Developer."</h1>
+            <p id="para">A web developer creates websites using coding languages like HTML, CSS, and JavaScript, ensuring functionality and design meet client needs.</p>
+        <button id="btn">Contact with me</button>
+</div>
+</section>
     </header>
     <main>
-        <section class="banner-title">
-            <div>
-    <img src="assets/Group.png" alt="">
+        <div class="development-header">
+            <div class="development-title-0">
+            <h2>Why Web Development??</h2>
+            <p>Web development enables global reach, enhances brand credibility, supports e-commerce, facilitates customer engagement, and provides scalable business solutions.</p>
         </div>
-        <div class="banner-description">
-            <h1 id="heading">"In the near future, I hope to<br id="br">become a Developer."</h1>
-            <p id="para">A web developer creates websites using coding languages like HTML, CSS, and JavaScript, ensuring functionality and design meet client needs.</p>
-            <button id="btn">Contact with me</button>
+       <section class="development-container">
+        <div class="developmet-colum-1">
+            <div class="development-content">
+            <h3 class="development-title">I will Do Coding and<br>Change The World</h3>
+            <p class="development-description">"I will do coding and change the world<br>by innovating digital solutions."</p>
+            <button class="development-btn">Learn More</button>
         </div>
-    </section>
+            <div class="development-image">
+                <img src="assets/Layer_1.png" alt="">
+            </div>
+        </div>
+        <div class="developmet-colum-2">
+            <div class="development-image">
+                <img src="assets/Group 3.png" alt="">
+            </div>
+            <div class="development-container">
+            <h3 class="development-title">I will help People by creating<br>Modern Web System</h3>
+            <p class="development-description">"I will help people by creating modern web<br>systems for efficient solutions."</p>
+            <button class="development-btn">Learn More</button>
+        </div>
+                    </div>
+        <div class="developmet-colum-3">
+            <div class="development-container">
+            <h3 class="development-title">I will Do Coding and<br>Change The World</h3>
+            <p class="development-description">"I will code to revolutionize technology and<br>positively impact the world."</p>
+            <button class="development-btn">Learn More</button>
+        </div>
+            <div class="development-image">
+                <img src="assets/Group 4.png" alt="">
+            </div>
+        </div>
+       </section>
+    </div>
     </main>
     <footer>
 
