added my inspiration about web development

--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
         </div>
        </section>
     </div>
+    <section class="inspiration">
+        <div class="inspiration-title">
+<h2 id="h2">My Inspiration</h2>
+<p class="luck">Sure! One of my programming heroes is Grace Hopper, a pioneer in computing and COBOL developer, inspiring generations.</p>
+        </div>
+        <div class="inspiration-description">
+            <iframe class="benefit" width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=C3FA28UzmIWaH8VQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
     </main>
     <footer>
 
