added my inspiration about web development

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="development-content">
             <h3 class="development-title">I will Do Coding and<br>Change The World</h3>
             <p class="development-description">"I will do coding and change the world<br>by innovating digital solutions."</p>
-            <button class="development-btn">Learn More</button>
+            <button class="development-btn not">Learn More</button>
         </div>
             <div class="development-image">
                 <img src="assets/Layer_1.png" alt="">
@@ -47,7 +47,7 @@
             <div class="development-container">
             <h3 class="development-title">I will help People by creating<br>Modern Web System</h3>
             <p class="development-description">"I will help people by creating modern web<br>systems for efficient solutions."</p>
-            <button class="development-btn">Learn More</button>
+            <button class="development-btn ">Learn More</button>
         </div>
                     </div>
         <div class="developmet-colum-3">
