added information of html css and javascript

--- a/index.html
+++ b/index.html
@@ -68,7 +68,34 @@
 <p class="luck">Sure! One of my programming heroes is Grace Hopper, a pioneer in computing and COBOL developer, inspiring generations.</p>
         </div>
         <div class="inspiration-description">
-            <iframe class="benefit" width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=C3FA28UzmIWaH8VQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe class="benefit" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=C3FA28UzmIWaH8VQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+    <section class="skills">
+        <h3 class="text-center section-title">My Current Target</h3>
+        <p class="text-center">Deepen my skills in HTML for structure, CSS for design, and JavaScript for interactivity to create effective, modern web applications and enhance user experiences.</p>
+        <div class="skill-container">
+            <div class="skill-1">
+                <img src="assets/html.png" alt="">
+                <h4>HTML</h4>
+                <p>Structure web pages with elements, tags, and attributes.</p>
+                <br>
+                <span><a href="">Learn More</a></span>
+            </div>
+            <div class="skill-2">
+                <img src="assets/css.png" alt="">
+                <h4>CSS</h4>
+                <p>Define web page presentation with styles, layouts, and effects.</p>
+                <br>
+                <span><a href="">Learn More</a></span>
+            </div>
+            <div class="skill-3">
+                <img src="assets/js.png" alt="">
+                <h4>JavaScript</h4>
+                <p>Create interactive web features like forms, animations, and dynamic content.</p>
+                <br>
+                <span><a href="">Learn More</a></span>
+            </div>
         </div>
     </section>
     </main>
