added support feedback for me

--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@
             </div>
         </div>
     </section>
+    <section class="support">
+        <h3 class="support-title ">I need Support</h3>
+        <p class="support-description text-center ">Support in web development is crucial for ensuring that websites and web applications remain functional, secure,<br> and effective over time.</p>
+        <div class="type">
+        <input class="input" type ="text" name="" id="" placeholder="Suggest me any feedback for me">
+        <input class="submit"type="submit" value="submit">
+    </div>
+    </section>
     </main>
     <footer>
 
