--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
 <nav>
-    <h2>Sudipto</h2>
+    <h2>Sudi<span id="dot">p</span>to</h2>
     <button id="button">Download Resume</button>
 </nav>
 <section class="banner-title">
@@ -19,7 +19,7 @@
 <div class="banner-description">
     <h1 id="heading">"In the near future, I hope to<br id="br">become a Developer."</h1>
             <p id="para">A web developer creates websites using coding languages like HTML, CSS, and JavaScript, ensuring functionality and design meet client needs.</p>
-        <button id="btn">Contact with me</button>
+        <button id="btn"><a class="last"href="#section-last">Contact with me</a></button>
 </div>
 </section>
     </header>
@@ -77,22 +77,22 @@
         <div class="skill-container">
             <div class="skill-1">
                 <img src="assets/html.png" alt="">
-                <h4>HTML</h4>
-                <p>Structure web pages with elements, tags, and attributes.</p>
+                <h4 class="extrabold">HTML</h4>
+                <p class="bo16">Structure web pages with elements, tags, and attributes.</p>
                 <br>
                 <span><a href="">Learn More</a></span>
             </div>
             <div class="skill-2">
                 <img src="assets/css.png" alt="">
-                <h4>CSS</h4>
-                <p>Define web page presentation with styles, layouts, and effects.</p>
+                <h4 class="extrabold">CSS</h4>
+                <p class="bo16">Define web page presentation with styles, layouts, and effects.</p>
                 <br>
                 <span><a href="">Learn More</a></span>
             </div>
             <div class="skill-3">
                 <img src="assets/js.png" alt="">
-                <h4>JavaScript</h4>
-                <p>Create interactive web features like forms, animations, and dynamic content.</p>
+                <h4 class="extrabold">JavaScript</h4>
+                <p class="bo16">Create interactive web features like forms, animations, and dynamic content.</p>
                 <br>
                 <span><a href="">Learn More</a></span>
             </div>
@@ -100,15 +100,22 @@
     </section>
     <section class="support">
         <h3 class="support-title ">I need Support</h3>
-        <p class="support-description text-center ">Support in web development is crucial for ensuring that websites and web applications remain functional, secure,<br> and effective over time.</p>
+        <p class="support-description text-center ">Support in web development is crucial for ensuring that websites and web applications remain functional, secure, and effective over time.</p>
         <div class="type">
         <input class="input" type ="text" name="" id="" placeholder="Suggest me any feedback for me">
         <input class="submit"type="submit" value="submit">
     </div>
     </section>
     </main>
-    <footer>
-
+    <footer >
+<div id="section-last" class="footer">
+    <p>An Open Commitment by Sudipto Nath</p>
+    <div class="gap">
+        <a href="https://www.facebook.com"><img src="assets/facebook.png" alt=""></a>
+    <a href="https://www.github.com"><img src="assets/github.png" alt=""></a>
+    <a href="https://www.linkedin.com"><img src="assets/linkedin-icon 1.png" alt=""></a>
+    </div>
+    </div>
     </footer>
 </body>
 </html>
